# service-notifier

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml
src/: circular_buffer.rs  main.rs  pack.rs
src/splice/: json.rs  mod.rs
